# PyML

./: .gitignore  LICENSE  README.md  __init__.py  exit.txt  prt.txt  py_ml.py  pyproject.toml
py_machine_l/: __init__.py
src/Py_MachineL.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/py_machine_l/: __init__.py  py_ml.py
